DPC-45: Docker compose setup is now working
Updated the attribution entrypoint to allow us to manually specify seeding the database.
Created a dev config profile to pass in docker variables.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,15 @@ services:
       - POSTGRES_DB=dpc-attribution
       - POSTGRES_PASSWORD=dpc-safe
     ports:
-      - "5433:5432"
+      - "5432:5432"
 
   attribution:
     image: dpc-attribution
     depends_on:
       - db
+    environment:
+      - SEED=true
+      - ENV=dev
 
   web:
     image: dpc-web
