--- a/dpc-web/src/main/resources/application.conf
+++ b/dpc-web/src/main/resources/application.conf
@@ -14,4 +14,9 @@ server {
   }]
 }
 
+httpClient {
+  timeout: 5s
+  connectionRequestTimeout: 5s
+}
+
 aggregation.bbclient.keyStore.location = "/bb.keystore"
