--- a/dpc-attribution/pom.xml
+++ b/dpc-attribution/pom.xml
@@ -57,6 +57,11 @@
             <artifactId>guice</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.5</version>
+        </dependency>
+        <dependency>
             <groupId>gov.cms.dpc</groupId>
             <artifactId>dpc-fhir</artifactId>
             <version>1.0-SNAPSHOT</version>
@@ -137,12 +142,22 @@
                     <container>
                         <args>
                             <arg>server</arg>
-                            <arg>${jib.container.appRoot}/resources/application.conf</arg>
+                            <!--<arg>${jib.container.appRoot}/resources/application.conf</arg>-->
                         </args>
                         <ports>
                             <port>8080</port>
                         </ports>
+                        <entrypoint>/entrypoint.sh</entrypoint>
                     </container>
+                    <extraDirectory>
+                        <path>${project.basedir}/docker</path>
+                        <permissions>
+                            <permission>
+                                <file>/entrypoint.sh</file>
+                                <mode>755</mode>
+                            </permission>
+                        </permissions>
+                    </extraDirectory>
                 </configuration>
             </plugin>
         </plugins>
