DPC-114: Modified BBClient constructor improve keystore handliing
The BBClient can now read the keystore from the resources, provided the relevant configuration key is not set.

Eventually, this should be injected by Guice.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,7 @@ services:
       - "3002:3002"
     environment:
       - attributionURL=http://attribution:8080/v1/
-      - logging.level=DEBUG
-      - aggregation.bbclient.keyStore.location=/bb.keystore
+      - ENV=dev
       - exportPath=/app/data
     depends_on:
       - attribution
