--- a/dpc-aggregation/pom.xml
+++ b/dpc-aggregation/pom.xml
@@ -48,4 +48,12 @@
             <version>1.3-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <testResources>
+            <testResource>
+                <directory>${project.basedir}/../bbcerts</directory>
+            </testResource>
+        </testResources>
+    </build>
 </project>
