--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,6 @@ language: java
 jdk:
   - oraclejdk11
 
+before_install:
+  - openssl aes-256-cbc -K $encrypted_ebb4f1b65c80_key -iv $encrypted_ebb4f1b65c80_iv
+  -in bbcerts/bb.keystore.enc -out bbcerts/bb.keystore -d
