--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,4 @@ jdk:
   - oraclejdk11
 
 before_install:
-  - openssl aes-256-cbc -K $encrypted_ebb4f1b65c80_key -iv $encrypted_ebb4f1b65c80_iv
-  -in bbcerts/bb.keystore.enc -out bbcerts/bb.keystore -d
+  - openssl aes-256-cbc -K $encrypted_ebb4f1b65c80_key -iv $encrypted_ebb4f1b65c80_iv -in bbcerts/bb.keystore.enc -out bbcerts/bb.keystore -d
