--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,16 @@
 language: java
+
 jdk:
   - oraclejdk11
 
+services:
+  - docker
+
 before_install:
   - openssl aes-256-cbc -K $encrypted_ebb4f1b65c80_key -iv $encrypted_ebb4f1b65c80_iv -in bbcerts/bb.keystore.enc -out bbcerts/bb.keystore -d
+
+before_script:
+  - docker-compose up
+
+script:
+  - curl http://localhost:3002
