--- a/pom.xml
+++ b/pom.xml
@@ -223,7 +223,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.1</version>
                 <configuration>
-                    <excludedGroups>integration</excludedGroups>
+                    <excludedGroups>Integration</excludedGroups>
                 </configuration>
             </plugin>
             <plugin>
