--- a/dpc-attribution/src/main/resources/application.conf
+++ b/dpc-attribution/src/main/resources/application.conf
@@ -1,19 +1,14 @@
 dpc.attribution {
-//  database = {
-//    driverClass = org.h2.Driver
-//    url = "jdbc:h2:file:./h2/app_db;DB_CLOSE_ON_EXIT=FALSE"
-//  }
+  database = {
+    driverClass = org.h2.Driver
+    url = "jdbc:h2:file:./h2/app_db;DB_CLOSE_ON_EXIT=FALSE"
+  }
 
   logging {
     loggers {
       "gov.cms.dpc" = DEBUG
       "org.hibernate.SQL" = DEBUG
     }
-  }
-
-  database = {
-    driverClass = org.postgresql.Driver
-    url = "jdbc:postgresql://localhost/dpc-dev"
   }
 
   server {
