--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,11 @@ jdk:
 
 before_install:
   - openssl aes-256-cbc -K $encrypted_ebb4f1b65c80_key -iv $encrypted_ebb4f1b65c80_iv -in bbcerts/bb.keystore.enc -out bbcerts/bb.keystore -d
-
-after_script:
   - wget https://codeclimate.com/downloads/test-reporter/test-reporter-0.6.3-linux-amd64 -O ./cc-test-reporter
   - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+
+after_script:
   - |
     for module in dpc-aggregation dpc-api dpc-attribution dpc-queue
     do
