DPC-172: Postgres connection is no longer leaking
The SessionFactory was not being injected correctly as a singleton, which was causing connections to leak.
A simple annotation change solved it.

--- a/dpc-attribution/src/main/resources/application.conf
+++ b/dpc-attribution/src/main/resources/application.conf
@@ -1,7 +1,9 @@
 dpc.attribution {
   database = {
     driverClass = org.postgresql.Driver
-    url = "jdbc:postgresql://localhost/dpc-dev"
+    url = "jdbc:postgresql://localhost:5432/dpc-attribution"
+    user = postgres
+    password = dpc-safe
   }
 
   logging {
