--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,13 @@ language: java
 jdk:
   - oraclejdk11
 
+services:
+  - postgresql
+
+# Setup the postgres database for testing
+before_script:
+  - psql -c 'create database dpc-attribution;' -U postgres
+
 before_install:
   - openssl aes-256-cbc -K $encrypted_ebb4f1b65c80_key -iv $encrypted_ebb4f1b65c80_iv -in bbcerts/bb.keystore.enc -out bbcerts/bb.keystore -d
   - wget https://codeclimate.com/downloads/test-reporter/test-reporter-0.6.3-linux-amd64 -O ./cc-test-reporter
