--- a/dpc-attribution/src/main/resources/application.conf
+++ b/dpc-attribution/src/main/resources/application.conf
@@ -2,8 +2,7 @@ dpc.attribution {
   database = {
     driverClass = org.postgresql.Driver
     url = "jdbc:postgresql://localhost:5432/dpc-attribution"
-    user = postgres
-    password = dpc-safe
+    user = travis
   }
 
   logging {
