DPC-168: Rename attribution database
Apparently, having a dash in the database name causes the pg command line tools to fail, so we’ve replaced it with an underscore.

--- a/dpc-attribution/src/main/resources/dev.application.conf
+++ b/dpc-attribution/src/main/resources/dev.application.conf
@@ -1,7 +1,7 @@
 dpc.attribution {
   database = {
     driverClass = org.postgresql.Driver
-    url = "jdbc:postgresql://db:5432/dpc-attribution"
+    url = "jdbc:postgresql://db:5432/dpc_attribution"
     user = postgres
     password = dpc-safe
   }
