--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ services:
 
 # Setup the postgres database for testing
 before_script:
-  - psql -c 'create database dpc-attribution;' -U postgres
+  - psql -c 'create database dpc_attribution;' -U postgres
 
 before_install:
   - openssl aes-256-cbc -K $encrypted_ebb4f1b65c80_key -iv $encrypted_ebb4f1b65c80_iv -in bbcerts/bb.keystore.enc -out bbcerts/bb.keystore -d
