DPC-169: Moved entities to dpc-common
Hibernate Entities are now in the common module, this means code generation works on the first try.
Patient and Provider entities now have the correct column mapping for the UUID types.

--- a/dpc-attribution/pom.xml
+++ b/dpc-attribution/pom.xml
@@ -179,11 +179,11 @@
                                     <properties>
                                         <property>
                                             <key>packages</key>
-                                            <value>gov.cms.dpc.attribution.models</value>
+                                            <value>gov.cms.dpc.common.entities</value>
                                         </property>
                                         <property>
                                             <key>dialect</key>
-                                            <value>MYSQl</value>
+                                            <value>org.hibernate.dialect.PostgreSQL9Dialect</value>
                                         </property>
                                     </properties>
                                     <includes>.*</includes>
@@ -199,11 +199,6 @@
                     </execution>
                 </executions>
                 <dependencies>
-                    <dependency>
-                        <groupId>org.postgresql</groupId>
-                        <artifactId>postgresql</artifactId>
-                        <version>${pgsql.version}</version>
-                    </dependency>
                     <dependency>
                         <groupId>org.jooq</groupId>
                         <artifactId>jooq-meta-extensions</artifactId>
