--- a/dpc-common/pom.xml
+++ b/dpc-common/pom.xml
@@ -34,5 +34,10 @@
             <groupId>javax.ws.rs</groupId>
             <artifactId>javax.ws.rs-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.2.15.Final</version>
+        </dependency>
     </dependencies>
 </project>
