DPC-168: Update README
Updated the README to include the necessary build instructions.

--- a/dpc-attribution/src/main/resources/application.conf
+++ b/dpc-attribution/src/main/resources/application.conf
@@ -2,7 +2,7 @@ dpc.attribution {
   database = {
     driverClass = org.postgresql.Driver
     url = "jdbc:postgresql://localhost:5432/dpc_attribution"
-    user = travis
+    user = postgres
   }
 
   logging {
