--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,10 +1,10 @@
-version: 2
+version: "2"
 checks:
   # IntelliJ generates suspicious equals/hashcode methods.
   # So we bump the complexity metric to 9, which should weed them out
   method-complexity:
-    enabled: true
-    threshold: 9
+    config:
+      threshold: 9
   # Disabled because IntelliJ generates suspicious equals/hashcode methods.
   identical-code:
     enabled: false
