DPC-169: Database records are actually being persisted
Fixed an embarrassing bug where the Seed records weren’t actually being persisted.
We don’t currently have a test to catch this, but DPC-22 will fail if this ever crops up again.

--- a/dpc-attribution/src/main/resources/application.conf
+++ b/dpc-attribution/src/main/resources/application.conf
@@ -1,8 +1,8 @@
 dpc.attribution {
-  database = {
+  database {
     driverClass = org.postgresql.Driver
     url = "jdbc:postgresql://localhost:5432/dpc_attribution"
-    user = travis
+    user = postgres
   }
 
   logging {
