--- a/dpc-common/pom.xml
+++ b/dpc-common/pom.xml
@@ -18,11 +18,6 @@
             <artifactId>guice</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.dropwizard</groupId>
-            <artifactId>dropwizard-jersey</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
             <groupId>${hapi.fhir.groupID}</groupId>
             <artifactId>hapi-fhir-base</artifactId>
         </dependency>
@@ -34,10 +29,17 @@
             <groupId>javax.ws.rs</groupId>
             <artifactId>javax.ws.rs-api</artifactId>
         </dependency>
+        <!--Locking this dependency version to the one provided by Dropwizard, we'll need to manually update it as we go along-->
         <dependency>
             <groupId>org.hibernate.</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>5.2.15.Final</version>
+            <version>5.4.2.Final</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-jersey</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
