--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,12 @@
 version: '3'
 
 services:
+
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
+
   db:
     image: postgres
     environment:
