--- a/dpc-queue/pom.xml
+++ b/dpc-queue/pom.xml
@@ -27,8 +27,15 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.10.5</version>
+        </dependency>
+        <!--Test dependencies-->
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
         </dependency>
+
     </dependencies>
 </project>
