--- a/dpc-common/pom.xml
+++ b/dpc-common/pom.xml
@@ -29,16 +29,14 @@
             <groupId>javax.ws.rs</groupId>
             <artifactId>javax.ws.rs-api</artifactId>
         </dependency>
-        <!--Locking this dependency version to the one provided by Dropwizard, we'll need to manually update it as we go along-->
-        <dependency>
-            <groupId>org.hibernate.</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>5.4.2.Final</version>
-            <scope>provided</scope>
-        </dependency>
         <dependency>
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-jersey</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
             <scope>provided</scope>
         </dependency>
     </dependencies>
