--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <typesafe.config.groupID>${jitpack.groupID}</typesafe.config.groupID>
         <hapi.fhir.groupID>${jitpack.groupID}.hapi-fhir</hapi.fhir.groupID>
         <hapi.fhir.version>jitpack-SNAPSHOT</hapi.fhir.version>
+        <pgsql.version>42.2.5</pgsql.version>
         <java.version>11</java.version>
         <jib.container.appRoot>/app</jib.container.appRoot>
     </properties>
@@ -70,6 +71,17 @@
                 <groupId>${typesafe.config.groupID}</groupId>
                 <artifactId>typesafe-dropwizard-configuration</artifactId>
                 <version>environment-SNAPSHOT</version>
+            </dependency>
+            <!--Locking this dependency version to the one provided by Dropwizard, we'll need to manually update it as we go along-->
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-core</artifactId>
+                <version>5.4.2.Final</version>
+            </dependency>
+            <dependency>
+                <groupId>org.postgresql</groupId>
+                <artifactId>postgresql</artifactId>
+                <version>${pgsql.version}</version>
             </dependency>
             <dependency>
                 <groupId>javax.ws.rs</groupId>
