--- a/dpc-api/pom.xml
+++ b/dpc-api/pom.xml
@@ -26,6 +26,10 @@
             <artifactId>dropwizard-client</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-hibernate</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
             <scope>compile</scope>
