--- a/dpc-attribution/src/main/resources/application.conf
+++ b/dpc-attribution/src/main/resources/application.conf
@@ -1,8 +1,9 @@
 dpc.attribution {
   database {
     driverClass = org.postgresql.Driver
-    url = "jdbc:postgresql://localhost:5432/dpc-dev"
+    url = "jdbc:postgresql://localhost:5432/dpc_attribution"
     user = postgres
+    password = dpc-safe
   }
 
   logging {
