--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,13 +23,15 @@ services:
       - ENV=dev
     depends_on:
       - db
+      - redis
+    volumes:
+      - export-volume:/app/data
 
   attribution:
     image: dpc-attribution
     depends_on:
       - db
     environment:
-      - SEED=false
       - ENV=dev
     ports:
       - "3500:8080"
@@ -49,3 +51,8 @@ services:
 
 volumes:
   export-volume:
+    driver: local
+    driver_opts:
+      type: none
+      device: /tmp
+      o: bind
