--- a/dpc-common/pom.xml
+++ b/dpc-common/pom.xml
@@ -31,7 +31,7 @@
         </dependency>
         <!--Locking this dependency version to the one provided by Dropwizard, we'll need to manually update it as we go along-->
         <dependency>
-            <groupId>org.hibernate.</groupId>
+            <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>5.4.2.Final</version>
             <scope>provided</scope>
