--- a/dpc-aggregation/pom.xml
+++ b/dpc-aggregation/pom.xml
@@ -10,11 +10,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dpc-aggregation</artifactId>
-    <name>DPC BlueButton Interaction Service</name>
+    <name>DPC Data Aggregation Service</name>
 
     <properties>
         <mainClass>gov.cms.dpc.aggregation.DPCAggregationService</mainClass>
-        <mockserverVersion>3.10.8</mockserverVersion>
         <resilience4j.version>0.14.1</resilience4j.version>
     </properties>
 
@@ -57,8 +56,10 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>${hapi.fhir.groupID}</groupId>
-            <artifactId>hapi-fhir-client</artifactId>
+            <groupId>gov.cms.dpc</groupId>
+            <artifactId>dpc-bluebutton</artifactId>
+            <version>0.3.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>${hapi.fhir.groupID}</groupId>
@@ -100,18 +101,6 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.mock-server/mockserver-core -->
-        <dependency>
-            <groupId>org.mock-server</groupId>
-            <artifactId>mockserver-netty</artifactId>
-            <version>${mockserverVersion}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mock-server</groupId>
-            <artifactId>mockserver-client-java</artifactId>
-            <version>${mockserverVersion}</version>
-        </dependency>
-
     </dependencies>
 
     <build>
@@ -123,6 +112,14 @@
                 <directory>src/main/resources</directory>
             </resource>
         </resources>
+        <testResources>
+            <testResource>
+                <directory>${project.basedir}/../src/test/resources</directory>
+            </testResource>
+            <testResource>
+                <directory>src/test/resources</directory>
+            </testResource>
+        </testResources>
         <plugins>
             <plugin>
                 <artifactId>maven-shade-plugin</artifactId>
