--- a/dpc-attribution/pom.xml
+++ b/dpc-attribution/pom.xml
@@ -105,7 +105,7 @@
         </testResources>
         <plugins>
             <plugin>
-                <artifactId>maven-shade-plugin</artifactIources>
+                <artifactId>maven-shade-plugin</artifactId>
            <configuration>
                     <createDependencyReducedPom>true</createDependencyReducedPom>
                     <transformers>
