--- a/dpc-attribution/pom.xml
+++ b/dpc-attribution/pom.xml
@@ -97,10 +97,10 @@
         </resources>
         <testResources>
             <testResource>
-                <directory>${project.basedir}/../src/test/resources</directory>
+                <directory>${project.basedir}/../src/main/resources</directory>
             </testResource>
             <testResource>
-                <directory>src/main/resources</directory>
+                <directory>src/test/resources</directory>
             </testResource>
         </testResources>
         <plugins>
