--- a/pom.xml
+++ b/pom.xml
@@ -250,23 +250,36 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration combine.children="append">
-                            <showWarnings>true</showWarnings>
-                            <compilerArgs>
-                                <arg>-XDcompilePolicy=simple</arg>
-                                <!--All ErrorProne configuration options need to be included in a single arg line-->
-                                <arg>-Xplugin:ErrorProne -XepExcludedPaths:.*/target/generated-sources/.*</arg>
-                                <arg>-Xlint:all</arg>
-                                <arg>-Werror</arg>
-                            </compilerArgs>
-                            <annotationProcessorPaths>
-                                <path>
-                                    <groupId>com.google.errorprone</groupId>
-                                    <artifactId>error_prone_core</artifactId>
-                                    <version>2.3.3</version>
-                                </path>
-                            </annotationProcessorPaths>
-                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>compile-with-error-prone</id>
+                                <phase>compile</phase>
+                                <goals>
+                                    <goal>compile</goal>
+                                </goals>
+                                <configuration>
+                                    <showWarnings>true</showWarnings>
+                                    <compilerArgs>
+                                        <arg>-XDcompilePolicy=simple</arg>
+                                        <!--All ErrorProne configuration options need to be included in a single arg line-->
+                                        <arg>-Xplugin:ErrorProne -XepExcludedPaths:.*/target/generated-sources/.*</arg>
+                                        <!-- Tell ErrorProne to ignore checking for processed annotations-->
+                                        <arg>-Xlint:all,-processing</arg>
+                                        <arg>-Werror</arg>
+                                    </compilerArgs>
+                                    <annotationProcessorPaths>
+                                        <path>
+                                            <groupId>com.google.errorprone</groupId>
+                                            <artifactId>error_prone_core</artifactId>
+                                            <version>2.3.3</version>
+                                        </path>
+                                    </annotationProcessorPaths>
+                                    <!-- Erroneously inverted logic... for details, see
+                                    https://jira.codehaus.org/browse/MCOMPILER-209 -->
+                                    <useIncrementalCompilation>true</useIncrementalCompilation>
+                                </configuration>
+                            </execution>
+                        </executions>
                     </plugin>
                 </plugins>
             </build>
@@ -379,7 +392,7 @@
                         </goals>
                         <configuration>
                             <!--Exclude generated sources, such as Jooq-->
-                            <excludePackageNames>gov.cms.dpc.attribution.daFo</excludePackageNames>
+                            <excludePackageNames>gov.cms.dpc.attribution.dao</excludePackageNames>
                         </configuration>
                     </execution>
                 </executions>
