--- a/dpc-api/src/main/resources/dev.application.conf
+++ b/dpc-api/src/main/resources/dev.application.conf
@@ -1,23 +1,28 @@
 dpc.api {
   database = {
-    url = "jdbc:postgresql://db:5432/dpc_attribution"
+    url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_attribution"
     user = postgres
     password = dpc-safe
   }
 
   queuedb = {
-      url = "jdbc:postgresql://db:5432/dpc_queue"
-      user = postgres
-      password = dpc-safe
-    }
-
-  authdb = {
-    url = "jdbc:postgresql://db:5432/dpc_auth"
+    url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_queue"
     user = postgres
     password = dpc-safe
   }
 
-  attributionURL = "http://attribution:8080/v1/"
-  exportPath = /app/data
-  authenticationDisabled = true
+  authdb = {
+    url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_auth"
+    user = postgres
+    password = dpc-safe
+  }
+
+  server {
+    applicationContextPath = "/api"
+  }
+
+  bbclient.keyStore.location = "/bb.keystore"
+
+  attributionURL = "http://backend.dpc-dev.local:8080/v1/"
+  exportPath = "/app/data"
 }
